--- a/package.json
+++ b/package.json
@@ -5,12 +5,12 @@
   "devDependencies": {
     "@types/jest": "26.0.19",
     "@types/node": "14.14.20",
-    "solid-js": "^0.23.8",
-    "solid-scripts": "0.0.49",
+    "solid-js": "^0.26.5",
+    "solid-scripts": "^0.0.55",
     "typescript": "4.1.3"
   },
   "dependencies": {
-    "@rturnq/solid-router": "^0.2.2"
+    "@rturnq/solid-router": "^0.2.6"
   },
   "scripts": {
     "start": "solid-scripts start",
