--- a/package.json
+++ b/package.json
@@ -1,27 +1,20 @@
 {
-  "name": "ice-cream",
-  "version": "0.1.0",
-  "private": true,
+  "name": "vite-template-solid",
+  "version": "0.0.0",
+  "description": "",
+  "scripts": {
+    "start": "vite",
+    "dev": "vite",
+    "build": "vite build",
+    "serve": "vite preview"
+  },
+  "license": "MIT",
   "devDependencies": {
-    "@types/jest": "26.0.19",
-    "@types/node": "14.14.20",
-    "solid-js": "^1.1.0",
-    "solid-scripts": "^0.0.59",
-    "typescript": "4.1.3"
+    "typescript": "^4.6.4",
+    "vite": "^2.9.9",
+    "vite-plugin-solid": "^2.2.6"
   },
   "dependencies": {
-    "@rturnq/solid-router": "^0.3.0"
-  },
-  "scripts": {
-    "start": "solid-scripts start",
-    "build": "solid-scripts build",
-    "test": "solid-scripts test"
-  },
-  "browserslist": [
-    "Chrome 74",
-    "Firefox 63",
-    "Safari 11",
-    "Edge 17",
-    "Node 10"
-  ]
+    "solid-js": "^1.4.2"
+  }
 }
