--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "vite-template-solid",
-  "version": "0.0.0",
-  "description": "",
+  "version": "0.0.1",
+  "description": "iFruit",
   "scripts": {
     "start": "vite",
     "dev": "vite",
@@ -16,7 +16,6 @@
     "vite-plugin-solid-svg": "^0.2.0"
   },
   "dependencies": {
-    "chart.js": "^3.9.1",
     "solid-a11y": "^0.3.0",
     "solid-app-router": "^0.3.3",
     "solid-js": "^1.4.2"
