--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@solidjs/router": "^0.4.2",
     "solid-a11y": "^0.3.0",
-    "solid-js": "^1.4.8"
+    "solid-js": "^1.4.8",
+    "solid-slider": "^1.3.3"
   }
 }
