--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "@solidjs/router": "^0.6.0",
+    "chartist": "^1.3.0",
     "solid-a11y": "^0.5.0",
     "solid-js": "^1.6.0",
     "solid-slider": "^1.3.9"
