--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@solidjs/router": "^0.8.2",
     "chartist": "^1.3.0",
+    "idb": "^7.1.1",
     "solid-a11y": "^0.5.0",
     "solid-js": "^1.6.14",
     "solid-slider": "^1.3.12"
