--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "vite-plugin-solid-svg": "^0.6.1"
   },
   "dependencies": {
+    "@floating-ui/dom": "^1.2.9",
     "@solidjs/router": "^0.8.2",
     "chartist": "^1.3.0",
     "idb": "^7.1.1",
