--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "vite-template-solid",
-  "version": "0.2.5",
+  "version": "0.3.0",
   "description": "iFruit",
+  "type": "module",
   "scripts": {
     "start": "vite",
     "dev": "vite",
@@ -10,18 +11,18 @@
   },
   "license": "MIT",
   "devDependencies": {
-    "typescript": "^5.2.2",
-    "vite": "^4.5.2",
-    "vite-plugin-solid": "^2.7.0",
-    "vite-plugin-solid-svg": "^0.6.4"
+    "typescript": "^5.3.3",
+    "vite": "^5.0.12",
+    "vite-plugin-solid": "^2.9.1",
+    "vite-plugin-solid-svg": "^0.8.0"
   },
   "dependencies": {
-    "@floating-ui/dom": "^1.5.1",
-    "@solidjs/router": "^0.8.3",
+    "@floating-ui/dom": "^1.5.4",
+    "@solidjs/router": "^0.10.9",
     "chartist": "^1.3.0",
-    "idb": "^7.1.1",
+    "idb": "^8.0.0",
     "solid-a11y": "^0.5.0",
-    "solid-js": "^1.7.11",
-    "solid-slider": "^1.3.14"
+    "solid-js": "^1.8.12",
+    "solid-slider": "^1.3.17"
   }
 }
