--- a/package.json
+++ b/package.json
@@ -17,11 +17,11 @@
     "vite-plugin-solid-svg": "^0.8.1"
   },
   "dependencies": {
+    "@ark-ui/solid": "^2.2.0",
     "@floating-ui/dom": "^1.6.3",
     "@solidjs/router": "^0.13.2",
     "chartist": "^1.3.0",
     "idb": "^8.0.0",
-    "solid-a11y": "^0.5.0",
     "solid-js": "^1.8.16",
     "solid-slider": "^1.3.17"
   }
