--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
     "@solidjs/router": "^0.13.2",
     "chartist": "^1.3.0",
     "idb": "^8.0.0",
-    "solid-js": "^1.8.16",
-    "solid-slider": "^1.3.17"
+    "solid-js": "^1.8.16"
   }
 }
