--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "vite-plugin-solid-svg": "^0.8.1"
   },
   "dependencies": {
-    "@ark-ui/solid": "^2.2.0",
+    "@kobalte/core": "^0.12.6",
     "@solidjs/router": "^0.13.2",
     "chartist": "^1.3.0",
     "idb": "^8.0.0",
