--- a/package.json
+++ b/package.json
@@ -1,16 +1,18 @@
 {
   "name": "vite-template-solid",
-  "version": "0.3.4",
+  "version": "0.4.0",
   "description": "iFruit",
   "type": "module",
   "scripts": {
     "start": "vite",
     "dev": "vite",
     "build": "vite build",
-    "serve": "vite preview"
+    "serve": "vite preview",
+    "lint": "eslint --fix"
   },
   "license": "MIT",
   "devDependencies": {
+    "@nabla/vite-plugin-eslint": "^2.0.4",
     "typescript": "^5.4.5",
     "vite": "^5.3.1",
     "vite-plugin-solid": "^2.10.2",
