--- a/package.json
+++ b/package.json
@@ -12,8 +12,12 @@
   },
   "license": "MIT",
   "devDependencies": {
-    "@nabla/vite-plugin-eslint": "^2.0.4",
+    "@eslint/js": "^9.6.0",
+    "eslint": "^9.6.0",
+    "eslint-plugin-solid": "^0.14.1",
+    "globals": "^15.8.0",
     "typescript": "^5.4.5",
+    "typescript-eslint": "^7.16.0",
     "vite": "^5.3.1",
     "vite-plugin-solid": "^2.10.2",
     "vite-plugin-solid-svg": "^0.8.1"
