--- a/package.json
+++ b/package.json
@@ -1,17 +1,23 @@
 {
   "name": "vite-template-solid",
-  "version": "0.3.4",
+  "version": "0.4.0",
   "description": "iFruit",
   "type": "module",
   "scripts": {
     "start": "vite",
     "dev": "vite",
     "build": "vite build",
-    "serve": "vite preview"
+    "serve": "vite preview",
+    "lint": "eslint --fix"
   },
   "license": "MIT",
   "devDependencies": {
+    "@eslint/js": "^9.6.0",
+    "eslint": "^9.6.0",
+    "eslint-plugin-solid": "^0.14.1",
+    "globals": "^15.8.0",
     "typescript": "^5.4.5",
+    "typescript-eslint": "^7.16.0",
     "vite": "^5.3.1",
     "vite-plugin-solid": "^2.10.2",
     "vite-plugin-solid-svg": "^0.8.1"
