--- a/.gitignore
+++ b/.gitignore
@@ -14,10 +14,8 @@
 
 # misc
 .DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+.env
+.env.production
 
 npm-debug.log*
 yarn-debug.log*
