--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vite-template-solid",
-  "version": "0.4.0",
+  "version": "0.4.1",
   "description": "iFruit",
   "type": "module",
   "scripts": {
@@ -12,21 +12,22 @@
   },
   "license": "MIT",
   "devDependencies": {
-    "@eslint/js": "^9.6.0",
-    "eslint": "^9.6.0",
-    "eslint-plugin-solid": "^0.14.1",
-    "globals": "^15.8.0",
-    "typescript": "^5.4.5",
-    "typescript-eslint": "^7.16.0",
-    "vite": "^5.3.1",
+    "@eslint/js": "^9.9.1",
+    "eslint": "^9.9.1",
+    "eslint-plugin-solid": "^0.14.3",
+    "globals": "^15.9.0",
+    "typescript": "^5.5.4",
+    "typescript-eslint": "^8.4.0",
+    "vite": "^5.4.2",
     "vite-plugin-solid": "^2.10.2",
     "vite-plugin-solid-svg": "^0.8.1"
   },
   "dependencies": {
-    "@kobalte/core": "^0.13.3",
-    "@solidjs/router": "^0.13.6",
+    "@kobalte/core": "^0.13.6",
+    "@solid-primitives/script-loader": "^2.2.0",
+    "@solidjs/router": "^0.14.3",
     "chartist": "^1.3.0",
     "idb": "^8.0.0",
-    "solid-js": "^1.8.17"
+    "solid-js": "^1.8.22"
   }
 }
